Adds form and post route

--- a/views/authors/authorsIndex.ejs
+++ b/views/authors/authorsIndex.ejs
@@ -8,5 +8,14 @@
 </head>
 <body>
   <h1>See All the Authors</h1>
+
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/authors/new">Add an Author</a></li>
+    </ul>
+  </nav>
+
+  
 </body>
 </html>
