Adds functionality to create author in db

--- a/views/authors/authorsNew.ejs
+++ b/views/authors/authorsNew.ejs
@@ -17,8 +17,8 @@
   </nav>
 
   <form action="/authors" method="POST">
-    <label for="name">Author Name: </label>
-    <input type="text" id="name">
+    <label for="authorName">Author Name: </label>
+    <input type="text" id="authorName" name="authorName">
     <br />
     <br />
     <input type="submit" value="Create an Author">
