Adds Author show and Author delete functionality

--- a/views/authors/authorsIndex.ejs
+++ b/views/authors/authorsIndex.ejs
@@ -18,9 +18,13 @@
 
   <ul>
     <% for (let i = 0; i < allAuthors.length; i++) { %>
-      <li><%= allAuthors[i].authorName %></li>
+        <li>
+            <a href="/authors/<%= allAuthors[i]._id %>">
+              <%= allAuthors[i].authorName %>
+            </a>
+        </li>
     <% } %>
-  </ul>
+</ul>
 
 </body>
 </html>
