--- a/views/authors/authorsNew.ejs
+++ b/views/authors/authorsNew.ejs
@@ -4,18 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style.css">
   <title>Authors New</title>
 </head>
 <body>
+  <%- include('../partials/navbar.ejs') %>
   <h1>Add an Author</h1>
-
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/authors">See all Authors</a></li>
-    </ul>
-  </nav>
-
+  
+  <a href="/authors">See all Authors</a>
   <form action="/authors" method="POST">
     <label for="authorName">Author Name: </label>
     <input type="text" id="authorName" name="authorName">
