--- a/views/articles/articlesEdit.ejs
+++ b/views/articles/articlesEdit.ejs
@@ -14,13 +14,8 @@
 
     <hr>
 
-    <form method="POST" action="/articles/<%= article._id %>?_method=PUT">
-        <label for="title">New Title of Article:</label>
-        <input type="text" name="title">
-        <br>
-        <label for="content">New Article Content:</label>
-        <input type="text" name="content">
-        <br>
+    <!-- TODO: Create the form that PUTs to /articles/:id -->
+    <form method="" action="">
         <input type="submit">
     </form>
 </body>
