--- a/views/authors/authorsShow.ejs
+++ b/views/authors/authorsShow.ejs
@@ -8,7 +8,7 @@
 	<body>
 		<%- include('../partials/navbar.ejs') %>
 
-		<h1>Show Page for <%= author.name %></h1>
+		<h1>Show Page for <%= author.authorName %></h1>
 		<main>
 			<section>
 				<h2>Author Attributes:</h2>
