--- a/views/authors/authorsShow.ejs
+++ b/views/authors/authorsShow.ejs
@@ -17,6 +17,12 @@
 				</ul>
 			</section>
 
+			<% for (let i = 0; i < author.articles.length; i++) { %>
+				<a href="/articles/<%= author.articles[i]._id %>">
+					<li><%= author.articles[i].title %></li>
+				</a>
+			<% } %>
+
       <section>
         <form action="/authors/<%= author._id %>?_method=DELETE" method="post">
             <input type="submit" value="Delete Author"/>
